--- a/src/components/slides/Congestion.css
+++ b/src/components/slides/Congestion.css
@@ -1,25 +1,26 @@
 .CongestionWide {
     display: flex;
-    height: calc(var(--vh, 1vh) * 7);
+    height: calc(var(--vh, 1vh) * 9);
     padding: 0 10vw;
 
     font-family: 'JejuGothic', cursive;
-    font-size: calc(var(--vh, 1vh) * 2.5);
+    font-size: calc(var(--vh, 1vh) * 3);
 }
 
 .PlaceTitle {
     display: flex;
-    width: 50vw;
-    justify-content: center;
+    padding-left: 5vw;
+    justify-content: left;
     align-items: center;
+    flex: 5;
 }
 
-.LevelTitle{
+.LevelTitle {
     display: flex;
-    width: 20vw;
-
     color: #A9A9A9;
-
-    justify-content: center;
+    padding-right: 15vw;
+    justify-content: right;
     align-items: center;
+    float: left;
+    flex: 2;
 }
