[03/28] dev: congestion levels color

--- a/src/components/slides/Congestion.css
+++ b/src/components/slides/Congestion.css
@@ -24,3 +24,15 @@
     float: left;
     flex: 2;
 }
+.Spare{
+    color: #3030D2;
+}
+.General{
+    color: #53B651;
+}
+.Caution{
+    color: #EBC854;
+}
+.Congestion{
+    color: #C84A3F;
+}
