--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,3 +1,11 @@
+:root {
+    --modal_title_size: calc(var(--vh, 1vh) * 3); /* ex.25px */
+    --modal_sub_title_size: calc(var(--vh, 1vh) * 2.7); /* ex.20px */
+    --modal_sub_category_size: calc(var(--vh, 1vh) * 2.3); /* ex.18px */
+    --modal_sub_data_size: calc(var(--vh, 1vh) * 1.9); /* ex.16px */
+    --modal_sub_margin: calc(var(--vh, 1vh) * 0.7); /* ex.5px */
+}
+
 .modal_ground {
     position: fixed;
     z-index: 100;
@@ -14,7 +22,7 @@
 .modal_container {
     /* 모달창 크기 */
     width: 80vw;
-    height: calc(var(--vh, 1vh) * 65);
+    height: calc(var(--vh, 1vh) * 70);
 
     /* 중앙 배치 */
     /* top, bottom, left, right 는 브라우저 기준으로 작동한다. */
@@ -25,10 +33,89 @@
     transform: translate(-50%, -50%);
 
     /* 모달창 디자인 */
-    /*background-color: #F9F2ED;*/
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+}
+
+.modal_main_box {
+    margin-top: calc(var(--vh, 1vh) * 3.0);
+    padding: 0 4vw;
+
+}
+
+.modal_title {
+    margin-top: calc(var(--vh, 1vh) * 2.5);
+    font-family: 'JejuGothic', cursive;
+    font-size: var(--modal_title_size);
+    text-align: center;
+}
+
+.modal_sub_title {
+    padding-left: calc(var(--vh, 1vh) * 1);
+    font-family: 'JejuGothic', cursive;
+    font-size: var(--modal_sub_title_size);
+    color: #F87474;
+}
+
+.modal_sub_box {
+    display: flex;
+    margin-top: var(--modal_sub_margin);
+    padding: calc(var(--vh, 1vh) * 0.3) calc(var(--vh, 1vh) * 1);
+    background: #F9F2ED;
+}
+
+.modal_sub_category {
+    margin: auto 0;
+    font-family: 'JejuGothic', cursive;
+    font-size: var(--modal_sub_category_size);
+    flex: 3 1;
+}
+
+.modal_sub_data {
+    margin: auto 0;
+    font-family: 'JejuGothic', cursive;
+    font-size: var(--modal_sub_data_size);
+    color: #676565;
+    flex: 7 1;
+}
+
+.modal_sub_data div {
+    padding: calc(var(--vh, 1vh) * 0.6) 0;
+    letter-spacing: -0.05em;
+}
+
+.modal_bus_info {
+    padding: calc(var(--vh, 1vh) * 0.6) 0;
+    font-family: 'JejuGothic', cursive;
+    font-size: var(--modal_sub_data_size);
+    color: #676565;
+    text-align: center;
+    flex: 1 1;
+}
+
+.modal_congestion_box {
+    display: grid;
+    padding: 0 calc(var(--vh, 1vh) * 2);
+}
+
+.modal_congestion_info {
+    display: flex;
+}
+
+.modal_congestion {
+    padding: calc(var(--vh, 1vh) * 0.6) 0;
+    font-family: 'JejuGothic', cursive;
+    font-size: var(--modal_sub_category_size);
+    letter-spacing: -0.08em;
+    color: #676565;
+}
+
+.modal_circle {
+    width: calc(var(--vh, 1vh) * 1);
+    height: calc(var(--vh, 1vh) * 1);
+    margin: auto calc(var(--vh, 1vh) * 1) auto 0;
+    border-radius: 50%;
 }
 
 /* 모달창 내부 X버튼 */
@@ -49,11 +136,4 @@
     color: black;
     font-family: 'JejuGothic', cursive;
     font-size: calc(var(--vh, 1vh) * 2.5);;
-}
-
-.modal_title{
-    margin-top: calc(var(--vh, 1vh) * 2.5);
-    font-family: 'JejuGothic', cursive;
-    font-size: calc(var(--vh, 1vh) * 4);;
-    text-align: center;
 }
